--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Personal Portfolio Website of Bhavya Mehta" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -42,17 +42,14 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script src="./assets/js/main.js"></script>
-  <script src="./assets/vendor/jquery/jquery.min.js"></script>
-  <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="./assets/vendor/php-email-form/validate.js"></script>
-  <script src="./assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="./assets/vendor/counterup/counterup.min.js"></script>
-  <script src="./assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="./assets/vendor/venobox/venobox.min.js"></script>
-  <script src="./assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="./assets/vendor/typed.js/typed.min.js"></script>
+  <script type="text/jsx" src="./assets/js/main.js"></script>
+  <script type="text/jsx" src="./assets/vendor/jquery/jquery.min.js"></script>
+  <script type="text/jsx" src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script type="text/jsx" src="./assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script type="text/jsx" src="./assets/vendor/php-email-form/validate.js"></script>
+  <script type="text/jsx" src="./assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script type="text/jsx" src="./assets/vendor/counterup/counterup.min.js"></script>
+  <script type="text/jsx" src="./assets/vendor/typed.js/typed.min.js"></script>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
